# aie-rt

./: .gitignore  README.md  license.txt
.github/workflows/: send-email.yml
driver/: CMakeLists.txt  README.md  license.txt
driver/data/: aienginev2.mdd  aienginev2.tcl  aienginev2.yaml
driver/examples/: Makefile  xaie_error_interrupt_test.c  xaie_tile_dma_loopback.c
driver/src/: CMakeLists.txt  Makefile.Linux  xaiengine.h
driver/src/common/: xaie_helper.c  xaie_helper.h  xaie_helper_internal.h  xaie_txn.h  xaielib.c  xaielib.h
driver/src/core/: xaie_core.c  xaie_core.h  xaie_core_aie.c  xaie_core_aie.h  xaie_core_aieml.c  xaie_core_aieml.h  xaie_elfloader.c  xaie_elfloader.h  xaie_uc.c
driver/src/device/: xaie_device_aie.c  xaie_device_aie.h  xaie_device_aie2ipu.c  xaie_device_aie2ps.c  xaie_device_aieml.c  xaie_device_aieml.h
driver/src/dma/: xaie_dma.c  xaie_dma.h  xaie_dma_aie.c  xaie_dma_aie.h  xaie_dma_aie2ps.c  xaie_dma_aie2ps.h  xaie_dma_aieml.c  xaie_dma_aieml.h
driver/src/events/: xaie_events.c  xaie_events.h  xaie_events_aie.h  xaie_events_aie2p.h
driver/src/global/: xaie2ipugbl_reginit.c  xaie2pgbl_reginit.c  xaie2psgbl_params.h  xaie2psgbl_reginit.c  xaie_events.h  xaie_feature_config.h  xaiegbl.c  xaiegbl.h  xaiegbl_defs.h  xaiegbl_dynlink.h  xaiegbl_events.h  xaiegbl_params.h  xaiegbl_regdef.h  xaiegbl_reginit.c  xaiemlgbl_reginit.c
driver/src/interrupt/: xaie_interrupt.c  xaie_interrupt.h  xaie_interrupt_aie.c  xaie_interrupt_aie2ipu.c  xaie_interrupt_aie2ps.c  xaie_interrupt_aieml.c  xaie_interrupt_backtrack.c  xaie_interrupt_control.c  xaie_interrupt_init.c
driver/src/io_backend/: xaie_io.c  xaie_io.h  xaie_io_internal.h
driver/src/io_backend/ext/: isa_stubs.h  xaie_amdair.c  xaie_baremetal.c  xaie_baremetal.h  xaie_cdo.c  xaie_cdo.h  xaie_controlcode.c  xaie_debug.c  xaie_debug.h  xaie_io_common.c  xaie_io_common.h  xaie_ipu.c  xaie_ipu.h  xaie_linux.c  xaie_linux.h  xaie_metal.c  xaie_metal.h  xaie_sim.c  xaie_sim.h  xaie_socket.c  xlnx-ai-engine.h
driver/src/io_backend/privilege/: xaie_io_privilege.c  xaie_io_privilege.h
driver/src/lite/: xaie_lite.c  xaie_lite.h  xaie_lite_aie.h  xaie_lite_aie2ipu.h  xaie_lite_aie2ps.h  xaie_lite_aieml.h  xaie_lite_hwcfg.h  xaie_lite_internal.h  xaie_lite_io.h  xaie_lite_npi.h  xaie_lite_privilege.c  xaie_lite_privilege_pm.c  xaie_lite_regdef_aie.h  xaie_lite_regdef_aie2p.h  xaie_lite_regdef_aie2ps.h  xaie_lite_regdef_aieml.h  xaie_lite_regops_aie.h  xaie_lite_regops_aieml.h  xaie_lite_shim_aie.h  xaie_lite_shim_aie2ipu.h  xaie_lite_shim_aie2p.h  xaie_lite_shim_aie2ps.h  xaie_lite_util.h
driver/src/locks/: xaie_locks.c  xaie_locks.h  xaie_locks_aie.c  xaie_locks_aie.h  xaie_locks_aieml.c  xaie_locks_aieml.h
driver/src/memory/: xaie_mem.c  xaie_mem.h
driver/src/npi/: xaie_npi.c  xaie_npi.h  xaie_npi_aie.c  xaie_npi_aieml.c
driver/src/perfcnt/: xaie_perfcnt.c  xaie_perfcnt.h
driver/src/pl/: xaie_plif.c  xaie_plif.h
driver/src/pm/: xaie_clock.c  xaie_clock.h  xaie_ecc.c  xaie_reset.c  xaie_reset.h  xaie_reset_aie.c  xaie_reset_aie.h  xaie_reset_aieml.c  xaie_reset_aieml.h  xaie_tilectrl.c
driver/src/rsc/: xaie_rsc.c  xaie_rsc.h  xaie_rsc_bcast.c  xaie_rsc_events.c
driver/src/sim/: xaiesim.c  xaiesim.h
driver/src/stream_switch/: xaie_ss.c  xaie_ss.h  xaie_ss_aieml.c
driver/src/timer/: xaie_timer.c  xaie_timer.h
driver/src/trace/: xaie_trace.c  xaie_trace.h
driver/src/utest/: utest.c
driver/src/util/: xaie_util.h  xaie_util_events.c  xaie_util_events.h  xaie_util_events_aieml.c  xaie_util_status.c  xaie_util_status.h
driver/test/stest/: aiert_tests.h  xaie_test_lock.c
driver/test/utest/: aie_hw_config.h  utest.c
driver/tests/stest/: xaie_test_lock.c
driver/tests/utest/: test.cpp  test_core.cpp  test_dma.cpp  test_dma_aie.cpp  test_dma_aieml.cpp  test_events.cpp  test_events_aie.cpp  test_events_aieml.cpp  test_global.cpp  test_interrupt.cpp  test_locks.cpp  test_locks_aie.cpp  test_locks_aieml.cpp  test_memory.cpp  test_multi_part.cpp  test_perfcnt.cpp  test_plif.cpp  test_pm.cpp  test_stream_switch.cpp  test_timer.cpp  test_timer_aie.cpp  test_timer_aieml.cpp  test_trace.cpp
fal/: CMakeLists.txt  README.md
fal/cmake/: collect.cmake  depends.cmake  options.cmake
fal/cmake/modules/: FindLibxaiengine.cmake
fal/data/: aiefal.mdd  aiefal.yaml
fal/doc/: CMakeLists.txt
fal/examples/: CMakeLists.txt  profile-aie.cpp  profile-io-aie.cpp  trace-pc-aie.cpp
fal/src/: CMakeLists.txt  Makefile  xaiefal.hpp
fal/src/common/: xaiefal-base.hpp  xaiefal-log.hpp
fal/src/profile/: xaiefal-profile.hpp
fal/src/rsc/: xaiefal-bc.hpp  xaiefal-events.hpp  xaiefal-groupevent.hpp  xaiefal-pc.hpp  xaiefal-perf.hpp  xaiefal-rsc-base.hpp  xaiefal-rsc-group-impl.hpp  xaiefal-rsc-group.hpp  xaiefal-rscmgr-backend-base.hpp  xaiefal-rscmgr-generic.hpp  xaiefal-rscmgr-linux.hpp  xaiefal-rscmgr.hpp  xaiefal-ss.hpp  xaiefal-trace.hpp
fal/tests/: CMakeLists.txt
fal/tests/utests/: CMakeLists.txt
fal/tests/utests/tc/: test.cpp  test_bc.cpp  test_combo.cpp  test_dma.cpp  test_groupevent.cpp  test_pc.cpp  test_rsc_base.cpp  test_rscs_stat.cpp  test_ss.cpp  test_trace.cpp  test_userevent.cpp
